[metadata]
name = resource-usage-middleware
version = 0.1.0
description = FastAPI middleware for tracking per-request elapsed time, CPU and GPU memory usage
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Framework :: FastAPI
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    fastapi
    psutil
    pynvml; platform_system == "Linux" or platform_system == "Windows"

[options.packages.find]
where = src